--- a/Strings/AppResources.zh.resx
+++ b/Strings/AppResources.zh.resx
@@ -1786,7 +1786,7 @@
     <comment>The {aircraft} is too large for current starting point {start location name} at {airport name}.\n\nPlease change the start location.</comment>
   </data>
   <data name="MenuPageBase.ATC" xml:space="preserve">
-    <value>ATC</value>
+    <value>航空管制</value>
     <comment>ATC</comment>
   </data>
   <data name="MenuPageBase.CannotConnect" xml:space="preserve">
@@ -2707,7 +2707,7 @@ Check map for more information</comment>
       <value>跟随互动教程，掌握飞行技术</value>
   </data>
   <data name="FlightMenu.FlightSchoolUpper" xml:space="preserve">
-      <value>飞行学校</value>
+      <value>飞行训练</value>
   </data>
   <data name="FlightMenu.FreeFlightDescription" xml:space="preserve">
       <value>自由选择飞机和机场，自定义飞行计划，
@@ -2727,7 +2727,7 @@ Check map for more information</comment>
 或包机航线，来一次说走就走的飞行</value>
   </data>
   <data name="FlightMenu.MissionsUpper" xml:space="preserve">
-      <value>任务</value>
+      <value>航班任务</value>
   </data>
   <data name="FlightMenu.ParkingUpper" xml:space="preserve">
       <value>停机位</value>
@@ -2968,7 +2968,7 @@ You can quit this session or embark on another journey to a new destination.</co
     <comment>MISSION BRIEF</comment>
   </data>
   <data name="SubscriptionMorePlansControl.ChooseAPlan" xml:space="preserve">
-    <value>选择方案</value>
+    <value>选择套餐</value>
   </data>
   <data name="SubscriptionMorePlansControl.Discount" xml:space="preserve">
     <value>{0:0}%折扣</value>
@@ -3268,5 +3268,191 @@ PLAYER</comment>
   <data name="SubscriptionControl.GooglePlaySubscriptionInfo" xml:space="preserve">
     <value>订阅将自动续订，直至取消。
 可随时在Google Play的订阅中心取消。</value>
+  </data>
+<data name="AchievementsControl.NewAchievementsEarnedUpper" xml:space="preserve">
+    <value>新成就达成！</value>
+    <comment>NEW ACHIEVEMENTS EARNED!</comment>
+  </data>
+  <data name="AchievementsControl.NoAchievementsFound" xml:space="preserve">
+    <value>未找到成就</value>
+    <comment>No Achievements Found</comment>
+  </data>
+  <data name="FlightScenarioControl.FailedToLoadScenarioInfo" xml:space="preserve">
+    <value>加载情景信息时出错({0})</value>
+    <comment>Failed to load scenario info ({0})</comment>
+  </data>
+  <data name="FlightScenarioControl.LoadingScenario" xml:space="preserve">
+    <value>加载情景中</value>
+    <comment>Loading Scenario</comment>
+  </data>
+  <data name="GameSelectionModalControl.AtcUnavailableInSingleplayer" xml:space="preserve">
+    <value>单人模式无法担任ATC</value>
+    <comment>ATC is unavailable in singleplayer.</comment>
+  </data>
+  <data name="GameSelectionModalControl.AtcUnavailableOnWorld" xml:space="preserve">
+    <value>{0}中无法担任ATC</value>
+    <comment>ATC is unavailable on {0}.</comment>
+  </data>
+  <data name="GameSelectionModalControl.Close" xml:space="preserve">
+    <value>关闭</value>
+    <comment>Close</comment>
+  </data>
+  <data name="GameSelectionModalControl.DemoSingleplayerOnly" xml:space="preserve">
+    <value>只能在单人模式试玩</value>
+    <comment>Demo is only available in singleplayer.</comment>
+  </data>
+  <data name="GameSelectionModalControl.FailedToOpenUrl" xml:space="preserve">
+    <value>打开链接时出错</value>
+    <comment>Failed to open url link.</comment>
+  </data>
+  <data name="GameSelectionModalControl.FlightTrainingSingleplayerOnly" xml:space="preserve">
+    <value>只能在单人模式进行飞行训练</value>
+    <comment>Flight Training is only available in singleplayer.</comment>
+  </data>
+  <data name="GameSelectionModalControl.GradeTooLowIFATC" xml:space="preserve">
+    <value>等级过低。只有IFATC可以不受自身等级限制担当管制</value>
+    <comment>Grade is too low. IFATC can only go to ATC at all times.</comment>
+  </data>
+  <data name="GameSelectionModalControl.Join" xml:space="preserve">
+    <value>加入</value>
+    <comment>Join</comment>
+  </data>
+  <data name="GameSelectionModalControl.JoinIFATC" xml:space="preserve">
+    <value>加入IFATC团队即可在专家服务器担任管制</value>
+    <comment>Join the IFATC team to access ATC in Expert.</comment>
+  </data>
+  <data name="GameSelectionModalControl.MultiplayerUnavailable" xml:space="preserve">
+    <value>当前无法选择多人模式</value>
+    <comment>Multiplayer is unavailable at this time.</comment>
+  </data>
+  <data name="GameSelectionModalControl.NoProReturnSolo" xml:space="preserve">
+    <value>未找到有效的Infinite Flight Pro订阅，正在返回单人模式</value>
+    <comment>No valid Infinite Flight Pro subscription found. Returning to singleplayer.</comment>
+  </data>
+  <data name="GameSelectionModalControl.SceneryEditorSingleplayerOnly" xml:space="preserve">
+    <value>只能在单人模式使用地景编辑器</value>
+    <comment>Scenery Editor is only available in singleplayer.</comment>
+  </data>
+  <data name="GameSelectionModesControl.AirTrafficControlShortDescription" xml:space="preserve">
+    <value>管理繁忙的空域！这一模式节奏快，变化多，带给你不一样的游戏体验</value>
+    <comment>Take control of the skies! It's dynamic and fast-paced, enhancing your aviation adventure</comment>
+  </data>
+  <data name="GameSelectionModesControl.FlightMissionsShortDescription" xml:space="preserve">
+    <value>从精选的客运和货运航线中选择你想执飞的航班</value>
+    <comment>Select from a curated list of flights from passenger to cargo</comment>
+  </data>
+  <data name="GameSelectionModesControl.FlightScenarioShortDescription" xml:space="preserve">
+    <value>在我们特别制作的训练情景中打磨飞行技术</value>
+    <comment>Hone your skills with our custom training scenarios</comment>
+  </data>
+  <data name="GameSelectionModesControl.FreeFlightShortDescription" xml:space="preserve">
+    <value>探索广阔的天空，我的飞行我做主</value>
+    <comment>Choose your adventure and explore the Infinite Flight skies</comment>
+  </data>
+  <data name="GameSelectionModesControl.SceneryEditorShortDescription" xml:space="preserve">
+    <value>依据现实设计制作游戏内的机场，定能让你乐在其中</value>
+    <comment>Immerse yourself in authentically designing airports</comment>
+  </data>
+  <data name="GameSelectionModesControl.TrainingUpper" xml:space="preserve">
+    <value>飞行训练</value>
+    <comment>TRAINING</comment>
+  </data>
+  <data name="GameSelectionProvidersControl.NoScenarioProvidersFoundUpper" xml:space="preserve">
+    <value>未找到情景制作者</value>
+    <comment>NO SCENARIO PROVIDERS FOUND</comment>
+  </data>
+  <data name="GameSelectionScenariosControl.NoScenariosFoundUpper" xml:space="preserve">
+    <value>未找到情景</value>
+    <comment>NO SCENARIOS FOUND</comment>
+  </data>
+  <data name="GameSelectionScenarioUnavailableControl.Description" xml:space="preserve">
+    <value>情景不可用或被隐藏</value>
+    <comment>Scenario is unavailable or hidden.</comment>
+  </data>
+  <data name="GameSelectionScenarioUnavailableControl.Title" xml:space="preserve">
+    <value>找不到情景</value>
+    <comment>Scenario Not Found</comment>
+  </data>
+  <data name="LogbookControl.AutoDeleteInformation" xml:space="preserve">
+    <value>自动删除功能会保留最近的10个回放。你可以通过锁定或导出回放来永久保存它们。</value>
+    <comment>Auto-delete keeps the latest 10 deletable replays. You can save replays for longer by locking or exporting them.</comment>
+  </data>
+  <data name="LogbookControl.AutoDeleteReplaysMultilineUpper" xml:space="preserve">
+    <value>自动删除
+回放</value>
+    <comment>AUTO-DELETE
+REPLAYS</comment>
+  </data>
+  <data name="LogbookControl.FailedReplayDeleteUnknownReason" xml:space="preserve">
+    <value>无法删除回放文件。原因：未知{0}</value>
+    <comment>Failed to delete the replay file. Unknown Reason: {0}</comment>
+  </data>
+  <data name="LogbookControl.LockUpper" xml:space="preserve">
+    <value>锁定</value>
+    <comment>LOCK</comment>
+  </data>
+  <data name="LogbookControl.NeedToUnlockReplay" xml:space="preserve">
+    <value>你需要先解锁这个回放，然后才能删除</value>
+    <comment>You need to unlock this replay before deleting it.</comment>
+  </data>
+  <data name="LogbookControl.ReplayATCProtected" xml:space="preserve">
+    <value>这个回放受到ATC规则的保护，在录制后的7天内无法删除</value>
+    <comment>This replay is protected by ATC rules and cannot be deleted within 7 days of the recording.</comment>
+  </data>
+  <data name="LogbookControl.UnlockReplayWarning" xml:space="preserve">
+    <value>解锁这个回放将在下次应用重启时删除旧的回放</value>
+    <comment>Unlocking this replay will delete old replays the next time the app launches.</comment>
+  </data>
+  <data name="LogbookControl.UnlockUpper" xml:space="preserve">
+    <value>解锁</value>
+    <comment>UNLOCK</comment>
+  </data>
+  <data name="MainMenuPage.AutoDeleteNotice" xml:space="preserve">
+    <value>启用自动删除回放可以清理存储空间。这个功能会保留最近的10个回放。你要启用吗？</value>
+    <comment>Free up storage by activating auto-delete for replays. It keeps the latest 10 deletable replays. Would you like to enable it?</comment>
+  </data>
+  <data name="NavigationControl.AchievementsUpper" xml:space="preserve">
+    <value>成就</value>
+    <comment>ACHIEVEMENTS</comment>
+  </data>
+  <data name="TimeInfoControl.LocationNotSet" xml:space="preserve">
+    <value>地点未设置，无法计算当地时间</value>
+    <comment>Location not set. Unable to compute local time.</comment>
+  </data>
+  <data name="TimeInfoControl.SunriseNotAvailable" xml:space="preserve">
+    <value>该地点在每年的这个时候无法看到日出</value>
+    <comment>Sunrise is not available for this location at this time of the year.</comment>
+  </data>
+  <data name="TimeInfoControl.SunsetNotAvailable" xml:space="preserve">
+    <value>该地点在每年的这个时候无法看到日落</value>
+    <comment>Sunset is not available for this location at this time of the year.</comment>
+  </data>
+  <data name="TimeInfoControl.TimeHeader" xml:space="preserve">
+    <value>时间</value>
+    <comment>TIME</comment>
+  </data>
+  <data name="UserAccountControl.DeleteAccount" xml:space="preserve">
+    <value>删除账号</value>
+    <comment>Delete Account</comment>
+  </data>
+  <data name="UserAccountControl.DeleteAccountDescription" xml:space="preserve">
+    <value>永久删除你的无限飞行账号和数据</value>
+    <comment>Permanently deletes your Infinite Flight account and stats.</comment>
+  </data>
+  <data name="UserAccountControl.DeleteAccountMessage" xml:space="preserve">
+    <value>此操作将删除你的无限飞行账号。注意：此操作不可撤销！你确定要删除账号吗？</value>
+    <comment>This will delete your Infinite Flight account. THIS IS NOT REVERSIBLE. Are you sure you want to delete the account?</comment>
+  </data>
+  <data name="UserAccountControl.JoinServer" xml:space="preserve">
+    <value>加入服务器</value>
+    <comment>Join Server</comment>
+  </data>
+  <data name="WeatherInfoControl.CloudAtAltitudeFeet" xml:space="preserve">
+    <value>云量 {0} 云高 {1} ft</value>
+    <comment>{0} at {1} ft</comment>
+  </data>
+  <data name="WeatherInfoControl.ManuallySetUpper" xml:space="preserve">
+    <value>自定义</value>
+    <comment>MANUALLY SET</comment>
   </data>
 </root>
