--- a/Strings/AppResources.bg.resx
+++ b/Strings/AppResources.bg.resx
@@ -3245,7 +3245,193 @@ PLAYER</comment>
     <comment>WEEKLY LEADERBOARD</comment>
   </data>
   <data name="SubscriptionControl.GooglePlaySubscriptionInfo" xml:space="preserve">
-    <value>Абонаментът се подновява автоматично до отмяната му.
-Можете да отмените по всяко време в Центъра за абонаменти на Google Play.</value>
+    <value>Абонаментът се подновява автоматично докато не го отмените.
+Можете да го отмените по всяко време в Центъра за абонаменти на Google Play.</value>
+  </data>
+  <data name="AchievementsControl.NewAchievementsEarnedUpper" xml:space="preserve">
+    <value>НОВИ ПОСТИЖЕНИЯ СА ОТКЛЮЧЕНИ!</value>
+    <comment>NEW ACHIEVEMENTS EARNED!</comment>
+  </data>
+  <data name="AchievementsControl.NoAchievementsFound" xml:space="preserve">
+    <value>Няма намерени постижения</value>
+    <comment>No Achievements Found</comment>
+  </data>
+  <data name="FlightScenarioControl.FailedToLoadScenarioInfo" xml:space="preserve">
+    <value>Зареждането на сценарий ({0}) беше неуспешно</value>
+    <comment>Failed to load scenario info ({0})</comment>
+  </data>
+  <data name="FlightScenarioControl.LoadingScenario" xml:space="preserve">
+    <value>Зареждане на сценария</value>
+    <comment>Loading Scenario</comment>
+  </data>
+  <data name="GameSelectionModalControl.AtcUnavailableInSingleplayer" xml:space="preserve">
+    <value>РВД не е достъпно в соло режим.</value>
+    <comment>ATC is unavailable in singleplayer.</comment>
+  </data>
+  <data name="GameSelectionModalControl.AtcUnavailableOnWorld" xml:space="preserve">
+    <value>РВД не е достъпен в {0}.</value>
+    <comment>ATC is unavailable on {0}.</comment>
+  </data>
+  <data name="GameSelectionModalControl.Close" xml:space="preserve">
+    <value>Затвори</value>
+    <comment>Close</comment>
+  </data>
+  <data name="GameSelectionModalControl.DemoSingleplayerOnly" xml:space="preserve">
+    <value>Демо режимът е достъпен само в соло.</value>
+    <comment>Demo is only available in singleplayer.</comment>
+  </data>
+  <data name="GameSelectionModalControl.FailedToOpenUrl" xml:space="preserve">
+    <value>Неуспешно отваряне на връзката.</value>
+    <comment>Failed to open url link.</comment>
+  </data>
+  <data name="GameSelectionModalControl.FlightTrainingSingleplayerOnly" xml:space="preserve">
+    <value>Тренировъчният режим е достъпен само в соло.</value>
+    <comment>Flight Training is only available in singleplayer.</comment>
+  </data>
+  <data name="GameSelectionModalControl.GradeTooLowIFATC" xml:space="preserve">
+    <value>Рангът ви е прекалено нисък. Членове на IFATC имат достъп до РВД по всяко време.</value>
+    <comment>Grade is too low. IFATC can only go to ATC at all times.</comment>
+  </data>
+  <data name="GameSelectionModalControl.Join" xml:space="preserve">
+    <value>Присъединяване</value>
+    <comment>Join</comment>
+  </data>
+  <data name="GameSelectionModalControl.JoinIFATC" xml:space="preserve">
+    <value>Присъединете се към екипа на IFATC, за да имате достъп до РВД на експертния сървър сървъра.</value>
+    <comment>Join the IFATC team to access ATC in Expert.</comment>
+  </data>
+  <data name="GameSelectionModalControl.MultiplayerUnavailable" xml:space="preserve">
+    <value>Мултиплейър режимът не е достъпен в момента.</value>
+    <comment>Multiplayer is unavailable at this time.</comment>
+  </data>
+  <data name="GameSelectionModalControl.NoProReturnSolo" xml:space="preserve">
+    <value>Не беше намерен валиден Infinite Flight Pro абонамент. Връщане към соло режим.</value>
+    <comment>No valid Infinite Flight Pro subscription found. Returning to singleplayer.</comment>
+  </data>
+  <data name="GameSelectionModalControl.SceneryEditorSingleplayerOnly" xml:space="preserve">
+    <value>Редактора на топографията е наличен само в соло режим.</value>
+    <comment>Scenery Editor is only available in singleplayer.</comment>
+  </data>
+  <data name="GameSelectionModesControl.AirTrafficControlShortDescription" xml:space="preserve">
+    <value>Поемете контрол над небесата! Това е динамично преживяване, подобряващо авиационното Ви приключение</value>
+    <comment>Take control of the skies! It's dynamic and fast-paced, enhancing your aviation adventure</comment>
+  </data>
+  <data name="GameSelectionModesControl.FlightMissionsShortDescription" xml:space="preserve">
+    <value>Изберете измежду избрани пътнически и карго полети</value>
+    <comment>Select from a curated list of flights from passenger to cargo</comment>
+  </data>
+  <data name="GameSelectionModesControl.FlightScenarioShortDescription" xml:space="preserve">
+    <value>Подобрете уменията си със специални тренировъчни сценарии</value>
+    <comment>Hone your skills with our custom training scenarios</comment>
+  </data>
+  <data name="GameSelectionModesControl.FreeFlightShortDescription" xml:space="preserve">
+    <value>Изберете приключението си и изследвайте небесата на Infinite Flight</value>
+    <comment>Choose your adventure and explore the Infinite Flight skies</comment>
+  </data>
+  <data name="GameSelectionModesControl.SceneryEditorShortDescription" xml:space="preserve">
+    <value>Потопете се в автентично пресъздаване на летища</value>
+    <comment>Immerse yourself in authentically designing airports</comment>
+  </data>
+  <data name="GameSelectionModesControl.TrainingUpper" xml:space="preserve">
+    <value>ОБУЧЕНИЕ</value>
+    <comment>TRAINING</comment>
+  </data>
+  <data name="GameSelectionProvidersControl.NoScenarioProvidersFoundUpper" xml:space="preserve">
+    <value>НЕ БЯХА НАМЕРЕНИ АВТОРИ НА СЦЕНАРИИ</value>
+    <comment>NO SCENARIO PROVIDERS FOUND</comment>
+  </data>
+  <data name="GameSelectionScenariosControl.NoScenariosFoundUpper" xml:space="preserve">
+    <value>НЕ БЯХА НАМЕРЕНИ СЦЕНАРИИ</value>
+    <comment>NO SCENARIOS FOUND</comment>
+  </data>
+  <data name="GameSelectionScenarioUnavailableControl.Description" xml:space="preserve">
+    <value>Сценарият не е достъпен или е скрит.</value>
+    <comment>Scenario is unavailable or hidden.</comment>
+  </data>
+  <data name="GameSelectionScenarioUnavailableControl.Title" xml:space="preserve">
+    <value>Сценарият не беше намерен</value>
+    <comment>Scenario Not Found</comment>
+  </data>
+  <data name="LogbookControl.AutoDeleteInformation" xml:space="preserve">
+    <value>Автоматичното изтриване на записи запазва 10-те най-скорошни отключени записа. Можете да ги запазите за по-дълго като ги заключите или експортирате.</value>
+    <comment>Auto-delete keeps the latest 10 deletable replays. You can save replays for longer by locking or exporting them.</comment>
+  </data>
+  <data name="LogbookControl.AutoDeleteReplaysMultilineUpper" xml:space="preserve">
+    <value>АВТО-ИЗТРИВАНЕ
+НА ЗАПИСИ</value>
+    <comment>AUTO-DELETE
+REPLAYS</comment>
+  </data>
+  <data name="LogbookControl.FailedReplayDeleteUnknownReason" xml:space="preserve">
+    <value>Записът не можа да бъде изтрит. Неизвестна причина: {0}</value>
+    <comment>Failed to delete the replay file. Unknown Reason: {0}</comment>
+  </data>
+  <data name="LogbookControl.LockUpper" xml:space="preserve">
+    <value>ЗАКЛЮЧИ</value>
+    <comment>LOCK</comment>
+  </data>
+  <data name="LogbookControl.NeedToUnlockReplay" xml:space="preserve">
+    <value>За да изтриете този запис, трябва да го отключите.</value>
+    <comment>You need to unlock this replay before deleting it.</comment>
+  </data>
+  <data name="LogbookControl.ReplayATCProtected" xml:space="preserve">
+    <value>Този запис е защитен от правилата на РВД и не може да бъде изтрит в рамките на 7 дни от създаването му.</value>
+    <comment>This replay is protected by ATC rules and cannot be deleted within 7 days of the recording.</comment>
+  </data>
+  <data name="LogbookControl.UnlockReplayWarning" xml:space="preserve">
+    <value>Ако отключите този запис, старите записи ще бъдат изтрити при следващото отваряне на приложението.</value>
+    <comment>Unlocking this replay will delete old replays the next time the app launches.</comment>
+  </data>
+  <data name="LogbookControl.UnlockUpper" xml:space="preserve">
+    <value>ОТКЛЮЧИ</value>
+    <comment>UNLOCK</comment>
+  </data>
+  <data name="MainMenuPage.AutoDeleteNotice" xml:space="preserve">
+    <value>Освободете пространство на устройството си, като включите автоматичното изтриване на записи. Запазват се 10-те най-скорошни отключени записа. Желаете ли да включите тази функция?</value>
+    <comment>Free up storage by activating auto-delete for replays. It keeps the latest 10 deletable replays. Would you like to enable it?</comment>
+  </data>
+  <data name="NavigationControl.AchievementsUpper" xml:space="preserve">
+    <value>ПОСТИЖЕНИЯ</value>
+    <comment>ACHIEVEMENTS</comment>
+  </data>
+  <data name="TimeInfoControl.LocationNotSet" xml:space="preserve">
+    <value>Не е зададена локация. Местното време не може да бъде изчислено.</value>
+    <comment>Location not set. Unable to compute local time.</comment>
+  </data>
+  <data name="TimeInfoControl.SunriseNotAvailable" xml:space="preserve">
+    <value>Изгревът не е достъпен на тази локация по това време на годината.</value>
+    <comment>Sunrise is not available for this location at this time of the year.</comment>
+  </data>
+  <data name="TimeInfoControl.SunsetNotAvailable" xml:space="preserve">
+    <value>Залезът не е достъпен на тази локация по това време на годината.</value>
+    <comment>Sunset is not available for this location at this time of the year.</comment>
+  </data>
+  <data name="TimeInfoControl.TimeHeader" xml:space="preserve">
+    <value>ЧАС</value>
+    <comment>TIME</comment>
+  </data>
+  <data name="UserAccountControl.DeleteAccount" xml:space="preserve">
+    <value>Изтриване на акаунта</value>
+    <comment>Delete Account</comment>
+  </data>
+  <data name="UserAccountControl.DeleteAccountDescription" xml:space="preserve">
+    <value>Изтрива Вашият Infinite Flight акаунт и статистиките му завинаги.</value>
+    <comment>Permanently deletes your Infinite Flight account and stats.</comment>
+  </data>
+  <data name="UserAccountControl.DeleteAccountMessage" xml:space="preserve">
+    <value>Това ще изтрие Вашият акаунт в Infinite Flight. ТОВА ДЕЙСТВИЕ Е НЕОБРАТИМО. Сигурни ли сте, че искате да изтриете акаунта си?</value>
+    <comment>This will delete your Infinite Flight account. THIS IS NOT REVERSIBLE. Are you sure you want to delete the account?</comment>
+  </data>
+  <data name="UserAccountControl.JoinServer" xml:space="preserve">
+    <value>Присъединяване към сървъра</value>
+    <comment>Join Server</comment>
+  </data>
+  <data name="WeatherInfoControl.CloudAtAltitudeFeet" xml:space="preserve">
+    <value>{0} на {1} фт</value>
+    <comment>{0} at {1} ft</comment>
+  </data>
+  <data name="WeatherInfoControl.ManuallySetUpper" xml:space="preserve">
+    <value>РЪЧНО НАСТРОЕНО</value>
+    <comment>MANUALLY SET</comment>
   </data>
 </root>
