--- a/Strings/AppResources.resx
+++ b/Strings/AppResources.resx
@@ -3534,11 +3534,13 @@ REPLAYS</comment>
     <comment>Delete Account</comment>
   </data>
   <data name="UserAccountControl.DeleteAccountDescription" xml:space="preserve">
-    <value>Permanently deletes your Infinite Flight account and stats.</value>
-    <comment>Permanently deletes your Infinite Flight account and stats.</comment>
+    <value>Removes your personal information, stats and linked accounts. Your subscription will still be available via a new, anonymous account.</value>
+    <comment>Removes your personal information, stats and linked accounts. Your subscription will still be available via a new, anonymous account</comment>
   </data>
   <data name="UserAccountControl.DeleteAccountMessage" xml:space="preserve">
-    <value>This will delete your Infinite Flight account. THIS IS NOT REVERSIBLE. Are you sure you want to delete the account?</value>
+    <value>This will delete your current Infinite Flight account, removing your stats and any linked accounts. THIS IS NOT REVERSIBLE. Your subscription will still be available via a new anonymous account.
+
+Are you sure you want to delete the account?</value>
     <comment>This will delete your Infinite Flight account. THIS IS NOT REVERSIBLE. Are you sure you want to delete the account?</comment>
   </data>
   <data name="UserAccountControl.JoinServer" xml:space="preserve">
@@ -3552,5 +3554,12 @@ REPLAYS</comment>
   <data name="WeatherInfoControl.ManuallySetUpper" xml:space="preserve">
     <value>MANUALLY SET</value>
     <comment>MANUALLY SET</comment>
+  </data>
+  <data name="UserAccount.DeleteAccountConfirmationMessage" xml:space="preserve">
+    <value>To confirm, type DELETE below</value>
+  </data>
+  <data name="UserAccount.DeleteAccountConfirmationTextToType" xml:space="preserve">
+    <value>DELETE</value>
+    <comment>User needs to type this to confirm they want their account deleted</comment>
   </data>
 </root>
