--- a/Strings/AppResources.pt.resx
+++ b/Strings/AppResources.pt.resx
@@ -1165,7 +1165,7 @@
     <value>Sensibilidade dos controles</value>
   </data>
   <data name="Settings.General.ForeFlight.Subtitle" xml:space="preserve">
-    <value>Envia informação de Posição/Altitude/Tráfego ao dispositivo rodando ForeFlight</value>
+    <value>Envia informação de Posição/Altitude/Tráfego ao dispositivo rodando ForeFlight.</value>
   </data>
   <data name="Settings.General.ForeFlight.Title" xml:space="preserve">
     <value>Ativar Link com EFB</value>
@@ -1947,7 +1947,7 @@ Reduza para evitar mais violações.</value>
     <value>Você foi deslogado e será necessário realizar o login novamente (error code {0})</value>
   </data>
   <data name="Error.NotSupported" xml:space="preserve">
-    <value>Esse recurso não é suportado (error code{0})</value>
+    <value>Esse recurso não é suportado (error code {0})</value>
   </data>
   <data name="Error.ServerNotFound" xml:space="preserve">
     <value>O servidor selecionado não está disponível (error code {0})</value>
@@ -2377,5 +2377,322 @@ Você poderá sair nesta sessão ou embarcar em mais uma jornada para outro dest
   <data name="SubscriptionControl.GooglePlaySubscriptionInfo" xml:space="preserve">
     <value>A assinatura será renovada automaticamente até ser cancelada.
 Você pode cancelar a qualquer momento no Centro de Assinaturas do Google Play.</value>
+  </data>
+  <data name="Error.LoadingScenarioError" xml:space="preserve">
+    <value>Ocorreu um erro ao baixar este cenário (error code {0})</value>
+  </data>
+  <data name="NavigationControl.Leaderboards" xml:space="preserve">
+    <value>Classificação</value>
+  </data>
+  <data name="Global.Mode" xml:space="preserve">
+    <value>Modo</value>
+  </data>
+  <data name="AircraftProfileImageControl.ImageUnavailable" xml:space="preserve">
+    <value>Imagem Indisponível</value>
+  </data>
+  <data name="ATC.Center" xml:space="preserve">
+    <value>Centro</value>
+  </data>
+  <data name="FlightMissionControl.FeaturedMissionUpper" xml:space="preserve">
+    <value>Missão em Destaque</value>
+  </data>
+  <data name="Global.You" xml:space="preserve">
+    <value>Você</value>
+  </data>
+  <data name="LeaderboardsControl.Landings" xml:space="preserve">
+    <value>Pousos</value>
+  </data>
+  <data name="LogbookControl.NoReplayFileUpper" xml:space="preserve">
+    <value>Nenhum arquivo de replay</value>
+  </data>
+  <data name="WeatherInfoControl.UnavailableInSoloUpper" xml:space="preserve">
+    <value>Indisponível em Solo</value>
+  </data>
+  <data name="CallSignSelectionPage.CallsignsNotAvailable" xml:space="preserve">
+    <value>Indicativos de Chamadas não estão disponíveis neste momento</value>
+  </data>
+  <data name="GamePage.WaitCanvas.ReadyToFlyUpper" xml:space="preserve">
+    <value>PRONTO PARA VOAR</value>
+  </data>
+  <data name="InputAssignmentControl.AreYouSureToResetAllControls" xml:space="preserve">
+    <value>Tem certeza de que deseja resetar todos os controles para os valores padrões?</value>
+  </data>
+  <data name="LeaderboardsControl.Pilots" xml:space="preserve">
+    <value>Pilotos</value>
+  </data>
+  <data name="MissionStatusControl.ObjectivesUpper" xml:space="preserve">
+    <value>OBJETIVOS</value>
+  </data>
+  <data name="MissionStatusControl.TapHereToContinueUpper" xml:space="preserve">
+    <value>CLIQUE AQUI PARA CONTINUAR</value>
+  </data>
+  <data name="NewsControl.Announcement" xml:space="preserve">
+    <value>Comunicado</value>
+  </data>
+  <data name="NewsControl.CommunityTopic" xml:space="preserve">
+    <value>Tópico da Comunidade</value>
+  </data>
+  <data name="NewsControl.Event" xml:space="preserve">
+    <value>Evento</value>
+  </data>
+  <data name="NewsControl.Mission" xml:space="preserve">
+    <value>Missão</value>
+  </data>
+  <data name="NewsControl.News" xml:space="preserve">
+    <value>Notícias</value>
+  </data>
+  <data name="NewsControl.StartFlightQuestion" xml:space="preserve">
+    <value>Começar o voo?</value>
+  </data>
+  <data name="NewsControl.Timeline" xml:space="preserve">
+    <value>Linha do Tempo</value>
+  </data>
+  <data name="NewsControl.Tutorial" xml:space="preserve">
+    <value>Tutorial</value>
+  </data>
+  <data name="NewsControl.Video" xml:space="preserve">
+    <value>Vídeo</value>
+  </data>
+  <data name="WorldModeModalControl.AtcNotAvailable" xml:space="preserve">
+    <value>Controle de Tráfego Aéreo não disponível</value>
+  </data>
+  <data name="WorldModeModalControl.GradeThreeRequired" xml:space="preserve">
+    <value>GRADE 3 NECESSÁRIO</value>
+  </data>
+  <data name="WorldModeModalControl.MoreServersUpper" xml:space="preserve">
+    <value>MAIS SERVIDORES</value>
+  </data>
+  <data name="WorldModeModalControl.MultiPlayer" xml:space="preserve">
+    <value>MULTIJOGADOR</value>
+  </data>
+  <data name="WorldModeModalControl.NoAccessUpper" xml:space="preserve">
+    <value>SEM ACESSO</value>
+  </data>
+  <data name="WorldModeModalControl.ProDescription" xml:space="preserve">
+    <value>Adquira o Infinite Flight Pro para acessar todos os servidores multijogador e voe com milhares de pilotos ao redor do mundo.</value>
+  </data>
+  <data name="WorldModeModalControl.SinglePlayer" xml:space="preserve">
+    <value>SOLO</value>
+  </data>
+  <data name="WorldModeModalControl.SinglePlayerOneLine" xml:space="preserve">
+    <value>SOLO</value>
+  </data>
+  <data name="WorldModeModalControl.TiredOfFlyingAloneUpper" xml:space="preserve">
+    <value>CANSADO DE VOAR SOLO?</value>
+  </data>
+  <data name="GameControlsAxisSetupControl.InvertUpper" xml:space="preserve">
+    <value>INVERTER</value>
+  </data>
+  <data name="LogbookControl.CouldNotImportReplayStorageError" xml:space="preserve">
+    <value>Não foi possível importar o arquivo de replay, por favor verifique o espaço de armazenamento disponível.</value>
+  </data>
+  <data name="GameControlsAxisSetupControl.AxisUpper" xml:space="preserve">
+    <value>EIXO</value>
+  </data>
+  <data name="GameControlsAxisSetupControl.MoveAxisToAssignUpper" xml:space="preserve">
+    <value>MOVA O EIXO PARA ATRIBUIR</value>
+  </data>
+  <data name="GameControlsAxisSetupControl.TapToAssignUpper" xml:space="preserve">
+    <value>TOQUE PARA ATRIBUIR</value>
+  </data>
+  <data name="GamePage.FlightCanBeResumed" xml:space="preserve">
+    <value>Este voo pode ser retomado</value>
+  </data>
+  <data name="GamePage.FlightCannotBeResumed" xml:space="preserve">
+    <value>Este voo não pode ser retomado</value>
+  </data>
+  <data name="GamePage.LeaveFlight.Message" xml:space="preserve">
+    <value>Tem certeza de que deseja sair do voo?</value>
+  </data>
+  <data name="GamePage.FlightResumeIndicatorName" xml:space="preserve">
+    <value>FLIGHT RESUME</value>
+  </data>
+  <data name="GamePage.LeaveFlight.Title" xml:space="preserve">
+    <value>Sair do voo</value>
+  </data>
+  <data name="Global.NotSaved" xml:space="preserve">
+    <value>Não Salvo</value>
+  </data>
+  <data name="Global.Off" xml:space="preserve">
+    <value>DESLIGADO</value>
+  </data>
+  <data name="Global.On" xml:space="preserve">
+    <value>LIGADO</value>
+  </data>
+  <data name="Global.Saved" xml:space="preserve">
+    <value>Salvo</value>
+  </data>
+  <data name="GamePage.DiscardSavedFlight" xml:space="preserve">
+    <value>Sobrescrever o voo salvo atualmente?</value>
+  </data>
+  <data name="Global.Cancelled" xml:space="preserve">
+    <value>CANCELADO</value>
+  </data>
+  <data name="Global.InFlight" xml:space="preserve">
+    <value>EM VOO</value>
+  </data>
+  <data name="Global.OnGround" xml:space="preserve">
+    <value>EM SOLO</value>
+  </data>
+  <data name="Global.Parked" xml:space="preserve">
+    <value>ESTACIONADO</value>
+  </data>
+  <data name="Global.ResumeLastFlight" xml:space="preserve">
+    <value>RETOMAR O ÚLTIMO VOO</value>
+  </data>
+  <data name="Global.Stopped" xml:space="preserve">
+    <value>PARADO</value>
+  </data>
+  <data name="Global.Taxiing" xml:space="preserve">
+    <value>TAXIANDO</value>
+  </data>
+  <data name="LeaderboardsControl.WeeklyLeaderboardUpper" xml:space="preserve">
+    <value>RANKING DA SEMANA</value>
+  </data>
+  <data name="AchievementsControl.NewAchievementsEarnedUpper" xml:space="preserve">
+    <value>NOVAS CONQUISTAS RECEBIDAS!</value>
+  </data>
+  <data name="AchievementsControl.NoAchievementsFound" xml:space="preserve">
+    <value>Nenhuma conquista encontrada</value>
+  </data>
+  <data name="FlightScenarioControl.FailedToLoadScenarioInfo" xml:space="preserve">
+    <value>Não foi possível carregar informação sobre o cenário ({0})</value>
+  </data>
+  <data name="FlightScenarioControl.LoadingScenario" xml:space="preserve">
+    <value>Carregando Cenário</value>
+  </data>
+  <data name="GameSelectionModalControl.AtcUnavailableInSingleplayer" xml:space="preserve">
+    <value>ATC não está disponível no Solo.</value>
+  </data>
+  <data name="GameSelectionModalControl.AtcUnavailableOnWorld" xml:space="preserve">
+    <value>ATC não está disponível em {0}.</value>
+  </data>
+  <data name="GameSelectionModalControl.Close" xml:space="preserve">
+    <value>Fechar</value>
+  </data>
+  <data name="GameSelectionModalControl.DemoSingleplayerOnly" xml:space="preserve">
+    <value>Demo está apenas disponível no Solo.</value>
+  </data>
+  <data name="GameSelectionModalControl.FailedToOpenUrl" xml:space="preserve">
+    <value>Não foi possível abrir o link.</value>
+  </data>
+  <data name="GameSelectionModalControl.FlightTrainingSingleplayerOnly" xml:space="preserve">
+    <value>Treinamento de Voo está apenas disponível no modo Solo.</value>
+  </data>
+  <data name="GameSelectionModalControl.GradeTooLowIFATC" xml:space="preserve">
+    <value>Grade insuficiente. Apenas IFATC pode acessar ATC sem restrições de grade.</value>
+  </data>
+  <data name="GameSelectionModalControl.Join" xml:space="preserve">
+    <value>Participar</value>
+  </data>
+  <data name="GameSelectionModalControl.JoinIFATC" xml:space="preserve">
+    <value>Participe do IFATC para acessar ATC no Expert.</value>
+  </data>
+  <data name="GameSelectionModalControl.MultiplayerUnavailable" xml:space="preserve">
+    <value>Multijogador está indisponível neste momento.</value>
+  </data>
+  <data name="GameSelectionModalControl.NoProReturnSolo" xml:space="preserve">
+    <value>Nenhuma assinatura Infinite Flight Pro encontrado. Retornando para modo Solo.</value>
+  </data>
+  <data name="GameSelectionModalControl.SceneryEditorSingleplayerOnly" xml:space="preserve">
+    <value>Editor de Aeroportos está disponível apenas no modo Solo.</value>
+  </data>
+  <data name="GameSelectionModesControl.AirTrafficControlShortDescription" xml:space="preserve">
+    <value>Assuma o controle dos céus! É dinâmico e rápido, aprimorando a sua aventura na aviação</value>
+  </data>
+  <data name="GameSelectionModesControl.FlightMissionsShortDescription" xml:space="preserve">
+    <value>Selecione em uma lista selecionadas de voos, desde passageiros e carga</value>
+  </data>
+  <data name="GameSelectionModesControl.FlightScenarioShortDescription" xml:space="preserve">
+    <value>Melhore a sua habilidade com os nossos cenários de treino personalizado</value>
+  </data>
+  <data name="GameSelectionModesControl.FreeFlightShortDescription" xml:space="preserve">
+    <value>Escolha a sua aventura e explore os céus de Infinite Flight</value>
+  </data>
+  <data name="GameSelectionModesControl.SceneryEditorShortDescription" xml:space="preserve">
+    <value>Mergulhe nos aeroportos com designs autênticos</value>
+  </data>
+  <data name="GameSelectionModesControl.TrainingUpper" xml:space="preserve">
+    <value>TREINAMENTO</value>
+  </data>
+  <data name="GameSelectionProvidersControl.NoScenarioProvidersFoundUpper" xml:space="preserve">
+    <value>NENHUM PROVEDORES DE CENÁRIO ENCONTRADO</value>
+  </data>
+  <data name="GameSelectionScenariosControl.NoScenariosFoundUpper" xml:space="preserve">
+    <value>NENHUM CENÁRIO ENCONTRADO</value>
+  </data>
+  <data name="GameSelectionScenarioUnavailableControl.Description" xml:space="preserve">
+    <value>Cenário não está disponível ou está oculto.</value>
+  </data>
+  <data name="GameSelectionScenarioUnavailableControl.Title" xml:space="preserve">
+    <value>Cenário não encontrado</value>
+  </data>
+  <data name="LogbookControl.AutoDeleteInformation" xml:space="preserve">
+    <value>Eliminação automática mantém os últimos 10 replays elimináveis. Você pode manter os replays por mais tempo bloqueando-o ou exportando-o.</value>
+  </data>
+  <data name="LogbookControl.AutoDeleteReplaysMultilineUpper" xml:space="preserve">
+    <value>ELIMINAR REPLAYS AUTOMATICAMENTE</value>
+  </data>
+  <data name="LogbookControl.FailedReplayDeleteUnknownReason" xml:space="preserve">
+    <value>Falha ao deletar o arquivo de replay. Motivo desconhecido: {0}</value>
+  </data>
+  <data name="LogbookControl.LockUpper" xml:space="preserve">
+    <value>BLOQUEAR</value>
+  </data>
+  <data name="LogbookControl.NeedToUnlockReplay" xml:space="preserve">
+    <value>Você precisa desbloquear este replay antes de deletar-lo.</value>
+  </data>
+  <data name="LogbookControl.ReplayATCProtected" xml:space="preserve">
+    <value>Este replay está protegido por regras de ATC e não pode ser deletado durante 7 dias após a gravação.</value>
+  </data>
+  <data name="LogbookControl.UnlockReplayWarning" xml:space="preserve">
+    <value>Desbloqueando este replay, vai deletar os replays antigos na próxima inicialização do app.</value>
+  </data>
+  <data name="LogbookControl.UnlockUpper" xml:space="preserve">
+    <value>DESBLOQUEAR</value>
+  </data>
+  <data name="MainMenuPage.AutoDeleteNotice" xml:space="preserve">
+    <value>Libera o espaço ativando a eliminação de replays automático. Mantém os últimos 10 replays elimináveis. Você deseja ativar?</value>
+  </data>
+  <data name="NavigationControl.AchievementsUpper" xml:space="preserve">
+    <value>CONQUISTAS</value>
+  </data>
+  <data name="TimeInfoControl.LocationNotSet" xml:space="preserve">
+    <value>Localização não definido. Não é possível calcular a hora local.</value>
+  </data>
+  <data name="TimeInfoControl.SunriseNotAvailable" xml:space="preserve">
+    <value>Amanhecer não está disponível nessa localização nesta época do ano.</value>
+  </data>
+  <data name="TimeInfoControl.SunsetNotAvailable" xml:space="preserve">
+    <value>Pôr do Sol não está disponível nessa localização nesta época do ano.</value>
+  </data>
+  <data name="TimeInfoControl.TimeHeader" xml:space="preserve">
+    <value>HORA</value>
+  </data>
+  <data name="UserAccountControl.DeleteAccount" xml:space="preserve">
+    <value>Deletar a conta</value>
+  </data>
+  <data name="UserAccountControl.DeleteAccountDescription" xml:space="preserve">
+    <value>Remove suas informações pessoais, estatísticas e contas vinculadas. A sua assinatura continuará disponível em uma nova conta anônima.</value>
+  </data>
+  <data name="UserAccountControl.DeleteAccountMessage" xml:space="preserve">
+    <value>Isso eliminará a sua conta de Infinite Flight atual, deletando as suas estatísticas e qualquer contas vinculadas. ISSO NÃO É REVERSÍVEL. Sua assinatura continuará disponível em uma nova conta anônima.
+
+Tem certeza de que deseja deletar a conta?</value>
+  </data>
+  <data name="UserAccountControl.JoinServer" xml:space="preserve">
+    <value>Entrar no servidor</value>
+  </data>
+  <data name="WeatherInfoControl.CloudAtAltitudeFeet" xml:space="preserve">
+    <value>{0} at {1} ft</value>
+  </data>
+  <data name="WeatherInfoControl.ManuallySetUpper" xml:space="preserve">
+    <value>CONFIGURADO MANUALMENTE</value>
+  </data>
+  <data name="UserAccount.DeleteAccountConfirmationMessage" xml:space="preserve">
+    <value>Para confirmar, escreva "DELETE" abaixo</value>
+  </data>
+  <data name="UserAccount.DeleteAccountConfirmationTextToType" xml:space="preserve">
+    <value>DELETAR</value>
   </data>
 </root>
